fix: change color contrast

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -4,7 +4,7 @@
 :root {
 	--ion-color-primary: #44e0cd;
 	--ion-color-primary-rgb: 68,224,205;
-	--ion-color-primary-contrast: #ffffff;
+	--ion-color-primary-contrast: #000000;
 	--ion-color-primary-contrast-rgb: 0,0,0;
 	--ion-color-primary-shade: #3cc5b4;
 	--ion-color-primary-tint: #57e3d2;
